Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
-    "greenville_population = \n",
+    "greenville_population = dict_\n",
     "greenville_population"
    ]
   },
