--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,7 @@
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
     "greenville_population = greenville.get(93)\n",
-    "greenville_population"
+    "print(greenville_population"
    ]
   },
   {
