Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,14 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
-    "greenville_population = greenville.get(93)\n",
-    "print(greenville_population"
+    "greenville_population = greenville.get()\n",
+    "print(greenville_population)"
    ]
   },
   {
