Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
-    "greenville_population = greenville.get()\n",
+    "greenville_population = printgreenville.get()\n",
     "print(greenville_population)"
    ]
   },
