--- a/index.ipynb
+++ b/index.ipynb
@@ -78,13 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "None\n",
       "None\n"
      ]
     }
@@ -92,7 +93,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
-    "greenville_population = printgreenville.get()\n",
+    "greenville_population = print(greenville.get(3))\n",
     "print(greenville_population)"
    ]
   },
