Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
     "greenville_population = print(greenville.get(3))\n",
-    "print(greenville_population)"
+    "greenville_population"
    ]
   },
   {
