--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
-    "greenville_population = greenville.get(3))\n",
+    "greenville_population = list(greenville.get(3))\n",
     "greenville_population"
    ]
   },
