--- a/index.ipynb
+++ b/index.ipynb
@@ -96,6 +96,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
+    "my_list = list(greenvill)\n",
     "greenville_population = list(greenville.get(3))\n",
     "greenville_population"
    ]
