Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,7 @@
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
     "my_list = list(greenville[],values())\n",
-    "greenville_population = \n",
+    "greenville_population = my_list[3]\n",
     "greenville_population"
    ]
   },
