Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
-    "my_list = list(greenville[0:4],values())\n",
+    "my_list = list(greenville[],values())\n",
     "greenville_population = my_list[3].values()\n",
     "greenville_population"
    ]
