--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
-    "my_list = list(greenville[3],values())\n",
+    "my_list = greenville[3],values())\n",
     "greenville_population = my_list\n",
     "greenville_population"
    ]
