Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,21 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-854ca3e2c332>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-33-50ed7c1fc119>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-854ca3e2c332>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    greenville[].values()\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-50ed7c1fc119>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list(greenville[].values())\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
-    "greenville[].values()\n"
+    "list(greenville[].values())\n"
    ]
   },
   {
