Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,9 @@
    ],
    "source": [
     "greenville = {'Area': 68, \n",
-    "              'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
+    "              'City': 'Greenville', \n",
+    "              'Country': 'USA', \n",
+    "              'Population': 93}\n",
     "greenville[0].values()\n"
    ]
   },
