Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,10 +94,10 @@
     }
    ],
    "source": [
-    "greenville = {'Area': 68, \n",
+    "greenville = {'Area': '68', \n",
     "              'City': 'Greenville', \n",
     "              'Country': 'USA', \n",
-    "              'Population': 93}\n",
+    "              'Population': '93'}\n",
     "\n",
     "dict(greenville[0].values())\n"
    ]
