Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville = [{'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}"
+    "greenville = [{'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}]"
    ]
   },
   {
