--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,10 @@
     }
    ],
    "source": [
-    "greenville[0].values()\n"
+    "greenville[0].values()\n",
+    "\n",
+    "greenville_population = my_list\n",
+    "greenville_population"
    ]
   },
   {
