Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,6 +95,7 @@
    "source": [
     "greenville[0].values()\n",
     "\n",
+    "list(greenville)\n",
     "greenville_population = my_list\n",
     "greenville_population"
    ]
