Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "greenville[0].values()\n",
     "\n",
-    "list(greenville[0].values())\n"
+    "mylist(greenville[0].values())\n"
    ]
   },
   {
