Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,9 @@
    "source": [
     "greenville[0].values()\n",
     "\n",
-    "mylist(greenville[0].values())\n"
+    "my_list = list(greenville[0].values())\n",
+    "greenville_population = my_list\n",
+    "greenville_population"
    ]
   },
   {
