--- a/index.ipynb
+++ b/index.ipynb
@@ -78,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[68, 'Greenville', 'USA', 93]"
+       "93"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
     "greenville[0].values()\n",
     "\n",
     "my_list = list(greenville[0].values())\n",
-    "greenville_population = my_list\n",
+    "greenville_population = my_list[3]\n",
     "greenville_population"
    ]
   },
