Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_area = None\n",
+    "greenville_area = my_list\n",
     "greenville_area # 68"
    ]
   },
