Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,11 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Area', 'City', 'Country', 'Population']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_keys = list(g)\n",
+    "city_keys = list(greenville[0].keys())\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
