--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "salina = None \n",
+    "salina = сшеш\n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
