Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -345,23 +345,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 288, 'Area': 3751}"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "los_cabos_pop = cities[4]\n",
-    "los_cabos_pop = cities[4] # 288"
+    "los_cabos_pop = cities[4].values() # 288"
    ]
   },
   {
