Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -345,12 +345,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "288"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = cities[4]['Poulation']\n",
-    "los_cabos_pop ="
+    "los_cabos_pop = cities[4]['Population']\n",
+    "los_cabos_pop "
    ]
   },
   {
