Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville = [{'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}]"
+    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}"
    ]
   },
   {
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "greenville[0].values()\n",
+    "\n",
     "\n",
     "my_list = list(greenville[0].values())\n",
     "greenville_population = my_list[3]\n",
