Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,10 +93,7 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "my_list = list(greenville[0].values())\n",
-    "greenville_population = my_list[3]\n",
+    "greenville_population = greenville\n",
     "greenville_population"
    ]
   },
