Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,22 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "93"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "greenville_population = greenville\n",
+    "greenville_population = greenville['Population']\n",
     "greenville_population"
    ]
   },
